--- a/style.css
+++ b/style.css
@@ -17,3 +17,28 @@ body {
     
 }
 
+.hotcake {
+    text-align: justify;
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#caca {
+
+    text-align: center;
+
+}
+
+.paso {
+    font-size: 25px;
+    text-align: center;
+
+}
+
+.panquecas {
+
+   font-size: 25px;
+   text-align: left;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
